# get_asset_type

./: .dockerignore  Cargo.toml  Dockerfile  README.md
src/: main.rs
src/asset/: mod.rs
src/asset/abi/: PrismXXBridge.abi.json
